src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
@import url("mandoc.css");
@import url("fonts.css");

html {
  font-family: "Inter", sans-serif;
  /* Turn off contextual alternatives */
  font-feature-settings: "calt" off;
}

/* Turn off ligatures for code and preformatted blocks */
code, pre {
  font-variant-ligatures: none;
  font-family: var(--ifm-font-family-monospace);
  font-weight: 500;
}


:root {
  --ifm-heading-font-family: "Akshar", sans-serif;
  --ifm-font-family-monospace: "JetBrains Mono", monospace;
  --ifm-color-primary: #332fd0;
  --ifm-color-primary-dark: #2e2abb;
  --ifm-color-primary-darker: #2b28b1;
  --ifm-color-primary-darkest: #242192;
  --ifm-color-primary-light: #4744d5;
  --ifm-color-primary-lighter: #524ed7;
  --ifm-color-primary-lightest: #706dde;
  --ifm-background-color: #f6f5f4;
  --ifm-h2-font-size: 2rem;
  --ifm-h3-font-size: 1.75rem;
  --ifm-h4-font-size: 1.5rem;
  --ifm-h5-font-size: 1.25rem;
}

[data-theme="dark"] {
  --ifm-color-primary: #7cd5f1;
  --ifm-color-primary-dark: #5bcaed;
  --ifm-color-primary-darker: #4bc5ec;
  --ifm-color-primary-darkest: #19b5e6;
  --ifm-color-primary-light: #9de0f5;
  --ifm-color-primary-lighter: #ade5f6;
  --ifm-color-primary-lightest: #dff5fc;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme="dark"] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

.header-github-link:hover {
  opacity: 0.6;
}

.header-github-link::before {
  content: "";
  width: 24px;
  height: 24px;
  display: flex;
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}

[data-theme="dark"] .header-github-link::before {
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='white' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}

.hero {
  background-color: #2b3137;
  color: white;
}

.footer {
  font-size: 0.9rem;
  background-color: #2b3137;
}

.button {
  border: 0;
  font-size: 1.2rem;
  font-weight: 600;
  /* make the button go in a new line on smaller viewports */
  flex-wrap: wrap;
  /* put a bit of space so they don't touch when they are in more lines*/
  margin: 3px;
}
.btn-install {
  background-color: #ff6961;
  border: 0;
}
.btn-contribute {
  background-color: #77d970;
}
.btn-learn {
  background-color: #54c7ec;
  border: 0;
}

.hero__title {
  font-size: 5rem;
  font-family: "Akshar Medium";
  margin-top: 0rem;
}

.hero__subtitle {
  font-family: "Akshar Medium";
  font-size: 1.75rem;
}

.navbar__title {
  font-family: "Akshar Medium";
  font-size: 1.3rem;
}

